--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: ABS Workshop 2023
-description: Information for the 5th International ABS Workshop 04-06.10.2023, in Lyon, France
+title: APM Workshop 2024
+description: Information for the 6th International Asynchronous Programming Models Workshop 02-04.10.2023, in Turin, Italy
 theme: jekyll-theme-slate
